# fastapi-user-service

./: .env  README.md  main.py  projectStructure.txt  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  user.py
app/core/: config.py  security.py
app/crud/: user.py
app/models/: user.py
app/schemas/: user.py
